  [Michele Simionato]
  * Improved the test coverage for event based with GMF correlation
  * Optimized the event based risk calculator from ruptures: now the ruptures
    are instantiated in the workers and not in the controller if possible
  * Exported the parameter ses_per_logic_tree_path in the ruptures.csv file
  * Improved the display names for the risk outputs
  * Added a /v1/:calc_id/abort route to the engine server and Abort buttons
    to the WebUI
  * Fixed the seeds properly in the case of vulnerability functions with PMFs:
    now even if the ground motion fields are all equal, the risk numbers
    will be different since there is a different seed per each field
  * Stored a rupture loss table in event based risk calculations
  * Made sure that the number of effective ruptures is stored in csm_info
  * Fixed the HMTK tests to work with numpy from 1.11 to 1.14
  * Added a command `oq shell` to open an embedded (I)Python shell
  * Turned the 'realizations' output into a dynamic output

  [Matteo Nastasi]
  * Split package from python-oq-engine to python-oq-engine,
    python-oq-engine-master and python-oq-engine-worker
  * Implemented an API `/v1/on_same_fs` to check filesystem accessibility
    between engine and a client application

  [Michele Simionato]
  * Reduced the data transfer when computing the hazard curves in postprocessing
  * Removed the FilteredSiteCollection class

  [Nick Ackerley]
  * Some improvements to the plotting routines of the HMTK

  [Michele Simionato]
  * Removed the ability to run `oq engine --run job_h.ini,job_r.ini`
  * Forbidden the site model in gmf_ebrisk calculations
  * When the option `--hc` is given the ruptures can now be read directly
    from the workers, thus saving some startup time
  * Optimized the storage of the ruptures: the site IDs are not saved anymore
  * Added a check for missing risk_investigation_time
  * Reduced the data transfer in the gmf_ebrisk calculator