@@ -928,3 +928,22 @@ def zipfiles(fnames, archive, mode='w', log=lambda msg: None):
         for f in fnames:
             log('Archiving %s' % f)
             z.write(f, f[prefix:])
+
+
+def detach_process():
+    """
+    Detach the current process from the controlling terminal by using a
+    double fork. On platforms without fork (Windows) do nothing.
+    """
+    # see https://pagure.io/python-daemon/blob/master/f/daemon/daemon.py and
+    # https://stackoverflow.com/questions/45911705/why-use-os-setsid-in-python
+    if not hasattr(os, 'fork'):   # on windows
+        return
+
+    def fork_then_exit_parent():
+        pid = os.fork()
+        if pid:  # in parent
+            os._exit(0)
+    fork_then_exit_parent()
+    os.setsid()
+    fork_then_exit_parent()
